@@ -1,3 +1,13 @@
+2007-11-26  Adele Peterson  <adele@apple.com>
+
+        Reviewed by Darin.
+
+        Fix for <rdar://problem/5591583> CrashTracer: [USER] 157 in Mail crashes at -[WebCoreFrameBridge reapplyStylesForDeviceType:]
+
+        * page/Frame.cpp: Add nil checks since every other caller of requestCSSStyleSheet checks for nil.
+        (WebCore::UserStyleSheetLoader::UserStyleSheetLoader):
+        (WebCore::UserStyleSheetLoader::~UserStyleSheetLoader):
+
 2007-11-26  Mark Rowe  <mrowe@apple.com>
 
         GCC 4.2 build fix.
